--- a/lecture_3/index3.html
+++ b/lecture_3/index3.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     
-    <script src="script.js"> </script>
-    <script src="practice2.js"> </script>
+    <script  src="script3.js"> </script>
 </body>
 </html>
