--- a/lecture_4/index_4.html
+++ b/lecture_4/index_4.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     
-    <script src="script.js"> </script>
-    <script src="practice2.js"> </script>
+    <script src="script_4.js"> </script>
 </body>
 </html>
