--- a/lecture_5/index_5.html
+++ b/lecture_5/index_5.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="script.js"> </script>
-    <script src="practice2.js"> </script>
+<script src="script_5.js"></script>
 </body>
 </html>
